--- a/views/index.pug
+++ b/views/index.pug
@@ -157,4 +157,4 @@ html(lang="en")
 				| Copyright © - NSS UIET - All rights reserved
 				br
 				| Created by - Nitish Gupta
-		script(src="js/resp.js")
+		script(src="../js/resp.js")
