--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -23,7 +23,7 @@
         height: 72px;
     }
     .v-class-resp{
-        opacity: 0;
+        display: none;
     }
     .section{
         flex-direction: column-reverse;
