--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
 		link(rel="stylesheet" href="../static/css/responsive.css")
 		title NSS UIET
 	body
-		nav.navbar.background.h-nav-resp
+		nav.navbar.footer.h-nav-resp
 			ul.nav-list.v-class-resp
 				.logo
 					img(src="../static/img/1.png" alt="logo")
@@ -152,7 +152,7 @@ html(lang="en")
 					input#email.form-input(type="email" name="email" placeholder="Enter Your email")
 					textarea#text.form-input(name="text" cols="30" rows="10" placeholder="Ellaborate your concern" style="height: 77px;resize: none;")
 					button.btn.btn-sm.btn-dark Submit
-		footer.background
+		footer.footer
 			p.text-footer
 				| Copyright © - NSS UIET - All rights reserved
 				br
