--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,8 +22,8 @@ html{
 .navbar{
     display: flex;
     align-items: center;
-    justify-content: center;
-    position: sticky;
+    /* justify-content: center; */
+    /* position: sticky; */
     top:0;
     cursor: pointer;
     
