added some features

--- a/views/login.pug
+++ b/views/login.pug
@@ -18,6 +18,8 @@ body
       li
         a(href="#") Home
       li
+            a(href="/#events") Events
+      li
         a(href="/#team") Team
       li
         a(href="/#about") About
