--- a/views/index.pug
+++ b/views/index.pug
@@ -42,32 +42,28 @@ html(lang="en")
 				.paras
 					p.sectionTag.text-big Plantation Drive
 					p.sectionSubTag.text-small
-						| Text related to plantation activity done by us like this we can all
-						| aur
-						| activities, competions
-						| ,events and all that stuff here
+						| Eminence and Inspiration were the words that resonated when NSS-UIET Unit conducted “Tree Plantation Drive” in collaboration with Global Warming Reduction Center, accompanying the student volunteers in the college premises.
+						
 				.thumbnail
 					img.imgFluid(src="../static/img/plantation.jpg" alt="event")
 			section.section
 				.paras
-					p.sectionTag.text-big Plantation Drive
+					p.sectionTag.text-big Cleanliness Drive
 					p.sectionSubTag.text-small
-						| Text related to plantation activity done by us like this we can all
-						| aur
-						| activities, competions
-						| ,events and all that stuff here
+						| Such drives are a wonderful opportunity for people’s participation and they are major avenues to raise awareness on the importance of cleanliness in one’s neighbourhood.
+						| Cleanliness drive programme on 
+						| Swachh Bharat Abhiyan 
+						| was organised by NSS-UIET 
+						| unit in collaboration with Unnat Bharat Abhiyan in campus.
 				.thumbnail
-					img.imgFluid(src="../static/img/plantation.jpg" alt="event")
+					img.imgFluid(src="../static/img/cleanliness-drive.jpg" alt="event")
 			section.section
 				.paras
-					p.sectionTag.text-big Plantation Drive
+					p.sectionTag.text-big Blood Donation Camp
 					p.sectionSubTag.text-small
-						| Text related to plantation activity done by us like this we can all
-						| aur
-						| activities, competions
-						| ,events and all that stuff here
+						| The NSS unit of UIET,Panjab University,Chandigarh organized a blood donation camp in collaboration with blood bank of PGIMER. The camp began with a short inaugural function where in Dr. Sanjay Vohra and his five member team was given a floral welcome.
 				.thumbnail
-					img.imgFluid(src="../static/img/plantation.jpg" alt="event")
+					img.imgFluid(src="../static/img/blood-donation.jpg" alt="event")
 		#team
 			.teamnssh1
 				h1 Our Team
