--- a/static/tablestyle.css
+++ b/static/tablestyle.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'lato', sans-serif;
 }
-.container {
+.container100 {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
@@ -16,10 +16,10 @@ h2 {
 h2 small {
     font-size: 0.5em;
 }
-.responsive-table{
+.responsive-table100{
     text-align: center;
 }
-.responsive-table li {
+.responsive-table100 li {
     border-radius: 3px;
     padding: 25px 30px;
     display: flex;
@@ -27,7 +27,7 @@ h2 small {
     margin-bottom: 10px;
     align-items: center;
 }
-.responsive-table .table-header {
+.responsive-table100 .table-header100 {
     background-color: #000000ab;
     font-size: 14px;
     text-transform: uppercase;
@@ -35,35 +35,35 @@ h2 small {
     color: rgb(255, 255, 255);
     /* text-align: center; */
 }
-.responsive-table .table-row {
+.responsive-table100 .table-row100 {
     background-color: #fff;
     box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
 }
-.responsive-table .col-1 {
+.responsive-table100 .col-1100 {
     flex-basis: 100%;
     width: 0;
 }
-.responsive-table .col-2 {
+.responsive-table100 .col-2100 {
     flex-basis: 100%;
     width: 0;
 }
-.responsive-table .col-3 {
+.responsive-table100 .col-3100 {
     flex-basis: 100%;
     width: 0;
 }
-.responsive-table .col-4 {
+.responsive-table100 .col-4100 {
     flex-basis: 100%;
     width: 0;
 }
-.responsive-table .col-5 {
+.responsive-table100 .col-5100 {
     flex-basis: 100%;
     width: 0;
   }
-.responsive-table .col-6 {
+.responsive-table100 .col-6100 {
     flex-basis: 100%;
     width: 0;
 }
-input.pendingbutton{
+input.pendingbutton100{
     display:inline-block;
     padding:0.3em 1.2em;
     margin:0 0.3em 0.3em 0;
@@ -76,46 +76,46 @@ input.pendingbutton{
     background-color:#d72f2f;;
     text-align:center;
     transition: all 0.2s;
-    width: 90px;
-    }
-    input.resolvedbutton{
-        display:inline-block;
-        padding:0.3em 1.2em;
-        margin:0 0.3em 0.3em 0;
-        border-radius:2em;
-        box-sizing: border-box;
-        text-decoration:none;
-        font-family:'Roboto',sans-serif;
-        font-weight:300;
-        color:#FFFFFF;
-        background-color:#1c9534ba;
-        text-align:center;
-        transition: all 0.2s;
-        width: 90px;
-        }
-input.pendingbutton:hover{
+    width: 120px;
+}
+input.resolvedbutton100{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#1c9534ba;
+    text-align:center;
+    transition: all 0.2s;
+    width: 120px;
+}
+input.pendingbutton100:hover{
     color: black;
     cursor: pointer;
 }
-input.resolvedbutton:hover{
+input.resolvedbutton100:hover{
     color: rgb(255, 255, 255);
     cursor: default;
 }
 @media all and (max-width: 1140px) {
-    .responsive-table .table-header {
+    .responsive-table100 .table-header100 {
         display: none;
     }
-    .responsive-table li {
+    .responsive-table100 li {
         display: block;
     }
-    .responsive-table .col {
+    .responsive-table100 .col100 {
         flex-basis: 100%;
     }
-    .responsive-table .col {
+    .responsive-table100 .col100 {
         display: flex;
         padding: 10px 0;
     }
-    .responsive-table .col:before {
+    .responsive-table100 .col100:before {
         color: #6c7a89;
         padding-right: 10px;
         content: attr(data-label);
