--- a/views/index.pug
+++ b/views/index.pug
@@ -163,7 +163,7 @@ html(lang="en")
 								img(src='../static/team-img/shubu.jpg' alt='team')
 								.inner100
 									.info100
-										h5 Shubajeet
+										h5 Subhajeet
 										p Student Coordinator
 										.social-links100
 											a(href='')
