--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
-		link(rel='icon' type='image/png' href='https://nss.gov.in/sites/default/files/u8VhQRwU_400x400.jpg')
+		link(rel='icon' type='image/png' href='https://nss.gov.in/sites/default/files/u8VhQRwU_400x400.jpg' style="border-radius:100px;")
 		link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1' crossorigin='anonymous')
 		link(rel="stylesheet" href="../static/css/style.css")
 		link(rel="stylesheet" href="../static/css/responsive.css")
@@ -125,7 +125,7 @@ html(lang="en")
 			section.team-section100
 				.container100
 					.teamnssh1100
-						h1 Our Team
+						h1 Meet Our Team
 						hr
 					//- .row
 						.section-title
@@ -337,5 +337,5 @@ html(lang="en")
 				| Copyright © - NSS UIET - All rights reserved
 				br
 				| Created by - Nitish Gupta
-		script(src="../static/js/resp.js")
+		//- script(src="../static/js/resp.js")
 		script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js' integrity='sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW' crossorigin='anonymous')
