--- a/views/login.pug
+++ b/views/login.pug
@@ -7,9 +7,7 @@ head
   link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1' crossorigin='anonymous')
   link(rel='stylesheet' type='text/css' href='static/main.css')
   link(rel="stylesheet" href="../static/css/style.css")
-  link(rel="stylesheet" href="../static/css/responsive.css")
-  
-  
+  link(rel="stylesheet" href="../static/css/responsive.css") 
   script(src='https://kit.fontawesome.com/a076d05399.js')
 body
   nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.sticky-top
@@ -23,7 +21,7 @@ body
       #navbarSupportedContent.collapse.navbar-collapse
         ul.navbar-nav.me-auto.mb-2.mb-lg-0
           li.nav-item
-            a.nav-link(aria-current='page' href='#') 
+            a.nav-link(aria-current='page' href='/') 
               b Home
           li.nav-item
             a.nav-link(href='/#events') 
@@ -73,11 +71,11 @@ body
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'UA-23581568-13');
-  script(src='js/main.js')
   footer.footer100
     p.text-footer100
       | Copyright © - NSS UIET - All rights reserved
       br
       | Created by - Nitish Gupta
   //- script(src="../static/js/resp.js")
+  //- script(src='js/main.js')
   script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js' integrity='sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW' crossorigin='anonymous')
