--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
-		link(rel='icon' type='image/png' href='https://nss.gov.in/sites/default/files/u8VhQRwU_400x400.jpg' style="border-radius:100px;")
+		link(rel='icon' type='image/ico' href='../static/img/icons/nss_symbol_oCJ_icon.ico')
 		link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1' crossorigin='anonymous')
 		link(rel="stylesheet" href="../static/css/style.css")
 		link(rel="stylesheet" href="../static/css/responsive.css")
@@ -33,7 +33,7 @@ html(lang="en")
 						li.nav-item
 							a.nav-link(href='#contact') Contact
 						li.nav-item
-							a.nav-link(href='/login') Admin Pannel
+							a.nav-link(href='/admin1') Admin Pannel
 					
 		
 		//- nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.sticky-top
